--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
 services:
   webui:
-    build:
-      context: .
-      dockerfile: Dockerfile  # Specify the Dockerfile name if it's not named 'Dockerfile' or located in a different directory
+    image: "ghcr.io/yummiii/sd-webui-forge-docker:latest"
     volumes:
       - "./data:/app/sd-webui"
     ports:
       - "7860:7860"
     environment:
-      - "ARGS=--listen --enable-insecure-extension-access"
+      - "ARGS=--listen --enable-insecure-extension-access" # Insecure extension access is required if you want to install extensions with the listen flag
     deploy:
       resources:
         reservations:
