--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile  # Specify the Dockerfile name if it's not named 'Dockerfile' or located in a different directory
     volumes:
-      - "./data:/app/sd-webui"
+      - "./data:/app"
     ports:
       - "7860:7860"
     environment:
