--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,15 @@ services:
     # image: "ghcr.io/yummiii/sd-webui-forge-docker:latest"
     build: .
     volumes:
-      - "./data:/app/sd-webui"
+      - "./:/app"
     ports:
       - "7860:7860"
     environment:
       - "ARGS=--listen --enable-insecure-extension-access"
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [gpu]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
