--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ services:
   webui:
     # image: "ghcr.io/yummiii/sd-webui-forge-docker:latest"
     build: .
-    volumes:
-      - "./data:/app/sd-webui"
+    user: root
     ports:
       - "7860:7860"
     environment:
