--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "7860:7860"
     environment:
-      - "ARGS=--listen --enable-insecure-extension-access"
+      - "ARGS=--api --listen --enable-insecure-extension-access"
     deploy:
       resources:
         reservations:
